# btse-mcp

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  client.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
btse_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  prompts.py  resources.py  server.py  tools.py
docs/: integration.md
scripts/: validate-skills.ts
skills/btse-account-setup/: SKILL.md
skills/btse-market-analysis/: SKILL.md
skills/btse-onboarding/: SKILL.md
skills/btse-placing-orders/: SKILL.md
skills/btse-risk-management/: SKILL.md
tests/: test_client.py  test_validation.py
