[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "btse-mcp"
version     = "0.1.0"
description = "MCP server for the BTSE Futures API"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
btse-mcp = "btse_mcp.cli:main"

[project.urls]
Repository = "https://github.com/xbotlive/btse-mcp"

[tool.setuptools.packages.find]
where   = ["."]
include = ["btse_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
