[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "btse-mcp"
version     = "0.1.4"
description = "MCP server for the BTSE Futures API"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "btse",
    "mcp",
    "futures",
    "trading",
    "crypto",
    "claude",
    "ai-agent",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
btse-mcp = "btse_mcp.cli:main"

[project.urls]
Homepage    = "https://github.com/xbotlive/btse-mcp"
Repository  = "https://github.com/xbotlive/btse-mcp"
Issues      = "https://github.com/xbotlive/btse-mcp/issues"
Changelog   = "https://github.com/xbotlive/btse-mcp/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["btse_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
